# xvector-emotion-arithmetic

./: .gitignore  README.md  pyproject.toml
data/tau/: tau_angry_avg4spk.pt  tau_angry_single0017.pt  tau_direction_analysis.json  tau_happy_avg4spk.pt  tau_happy_single0017.pt  tau_sad_avg4spk.pt  tau_sad_single0017.pt
scripts/data/: prepare_esd_jsonl.py  resample_esd.py  transcribe_emouerj.py
scripts/deploy/: emotionize_audio.py
scripts/elimination/: exp01.py  exp_token_swap.py  extract_emotion_centroids.py  infer_emotion_vector.py  infer_lora.py
scripts/repro/: add_utmos_to_results.py  analyze_tau_directions.py  compute_gt_ceiling.py  compute_gt_ceiling_ptbr.py  exp_xvec_interpolation.py  extract_xvec_tau.py  infer_full_ft.py  run_en2en_sweep.py  run_ptbr_sweep.py
src/: emotionize.py  emouerj.py  lora.py  paths.py  sweep.py  xvec.py
src/metrics/: __init__.py  asr.py  emotion.py  speaker.py  utmos.py
